# Test-Station-QtDesktopApp

./: .gitignore  README.md  appMainWindow.py  pyproject.toml
UIs/: ConfigurationTab.ui  DatabaseTab.ui  TerminalTab.ui  TerminalTab_ui.py  ui_ConfigurationTab.py  ui_DatabaseTab.py  ui_TerminalTab.py
doc/: SQL Shell commands.txt
dp-qtdesktopapp/: dp-qtdesktopapp.py
dp-qtdesktopapp/include/: ConfigurationTab.py  DatabaseTab.py  MeasurementTab.py  TerminalTab.py
dp-qtdesktopapp/include/UIs/: ConfigurationTab.ui  ControlTab.ui  ControlTab_ui.py  DatabaseTab.ui  DatabaseTab_ui.py  MeasurementTab.ui  MeasurementTab_ui.py
include/: AbstractTableModel.py  SqlQueryModel.py
main/: app_main.py
